@@ -18,6 +18,7 @@
 - API Change: DefaultTextureBinder WEIGHTED strategy replaced by LRU strategy.
 - API Change: ShaderProgram begin and end methods are deprecated in favor to bind method.
 - API Addition: Added a OpenALAudio#getSourceId(long) method.
+- API Addition: Added a ShaderProgram#getHandle() method.
 
 [1.9.10]
 - API Addition: Allow target display for maximization LWJGL3 backend
